<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/corso_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.CorsoDocenteActivity"
    tools:openDrawer="start">

...
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:fitsSystemWindows="true"
                android:theme="@style/AppTheme.AppBarOverlay">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/toolbar_layout_docente"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:contentScrim="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:toolbarId="@+id/toolbar_docente">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar_docente"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/AppTheme.PopupOverlay" />

                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_anchor="@id/app_bar_docente"
                app:layout_anchorGravity="bottom|end"
                app:srcCompat="@android:drawable/ic_input_add" />
...
        </androidx.coordinatorlayout.widget.CoordinatorLayout>


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_corso_docente"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_docente"
        app:menu="@menu/drawer_menu_corso_docente" />

...
